dang markdown syntax

--- a/_posts/2011-04-30-gumbo.md
+++ b/_posts/2011-04-30-gumbo.md
@@ -2,7 +2,7 @@
 layout: post
 type: blog
 ---
-My wife and I made "(Quick & Easy Gumbo)[http://l.spt.la/gumbo]" for an event at our church this evening. I know it's not "real" gumbo, but let me tell ya, it's pretty tasty.
+My wife and I made ["Quick & Easy Gumbo"](http://l.spt.la/gumbo) for an event at our church this evening. I know it's not "real" gumbo, but let me tell ya, it's pretty tasty.
 
 We modified the recipe in a coupleways, and learned a couple things in the process about how we should have adjusted for those changes. 
 
