--- a/_posts/2011-04-30-gumbo.md
+++ b/_posts/2011-04-30-gumbo.md
@@ -4,7 +4,7 @@ type: blog
 ---
 My wife and I made ["Quick & Easy Gumbo"](http://l.spt.la/gumbo) for an event at our church this evening. I know it's not "real" gumbo, but let me tell ya, it's pretty tasty.
 
-We modified the recipe in a coupleways, and learned a couple things in the process about how we should have adjusted for those changes. 
+We modified the recipe in a coupleways, and learned a couple things in the process about how we should have adjusted for those changes.
 
 First, we used hot breakfast sausage. The flavor on this stuff is amazing, but I think it must have been a little leaner than the sausage the recipe was expecting. I would recommend adding a tablespoon of oil to the your pan before putting the sausage in so you don't burn it.
 
@@ -13,4 +13,6 @@ Second, and I suppose this applies to recipes in general, chop up everything ahe
 Third, I added about twice as much creole seasoning as the recipe called for. I tend to like my food salty and spicy, so the recipe might suit your taste, but I would suggest 1&frac12; times the amount listed in the recipe.
 
 My cooking adventures will continue!
+
+**UPDATE:** Louisana lady says, "Good job on the Gumbo!" I'd say that's a success :)
 
