Quick refactor and increase container max-width to 1000px

--- a/_posts/2011-05-05-Postwork.md
+++ b/_posts/2011-05-05-Postwork.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 type: link
-source: http://manicho.deviantart.com/art/50-Photoshop-Postwork-Actions-65223059
+source: "http://manicho.deviantart.com/art/50-Photoshop-Postwork-Actions-65223059"
 ---
 
 [50 Photoshop Postwork Actions]({{ page.source }}):
