--- a/_posts/notes/2011-04-30-gumbo.md
+++ b/_posts/notes/2011-04-30-gumbo.md
@@ -6,6 +6,11 @@ title: Gumbo
 description: I know it's not "real" gumbo, but let me tell ya, it's pretty tasty.
 
 category: Food
+
+tags:
+  - Recipes
+  - Cajun
+  - Soup
 ---
 My wife and I made ["Quick & Easy Gumbo"][recipe] for an event at our church
 this evening. I know it's not "real" gumbo, but let me tell ya, it's pretty
